2002-08-05  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* intro.texi, srfi-modules.texi: Added (use-modules (ice-9
	rdelim)) to an example that uses read-line.  Thanks to Ralf
	Mattes!

	* scheme-memory.texi: Added an introductory blurb about GC that I
	had lying around.

2002-08-02  Gary Houston  <ghouston@arglist.com>

	* scheme-modules.texi: split "Scheme and modules" into
	"provide and require" and "Environments".  Mention R5RS
	environments.

2002-07-16  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-options.texi (Debugger options): New subsection
	describing stack overflow and what to do about it.

2002-07-10  Gary Houston  <ghouston@arglist.com>

	* scheme-modules.texi (Compiled Code Modules): Removed description
	of scm_register_module_xxx, which no longer exists.  A description
	of current techniques is needed.

2002-05-09  Marius Vollmer  <mvo@zagadka.ping.de>

	* scheme-data.texi (Numbers): Added description of the new values
	+inf.0, -inf.0 and +nan.0.

	* posix.texi (Runtime Environment): Added entries for 'setenv' and
	'unsetenv'.

2002-04-28  Marius Vollmer  <mvo@zagadka.ping.de>

	* gh.texi, data-rep.texi: Moved `@deftyp {Data type} SCM' line
	from gh.texi to data-rep.texi.  Both files already had similar
	descriptions for SCM.  Given that gh.texi is deprecated, looking
	up `SCM' in the index should take one to the primary location
	rather than deprecated section.  Hence this change.  Added
	`@deftp' for scm_t_bits data type so that a proper index entry is
	added for this.  Thanks to Richard Y. Kim!
	
	* data-rep.texi (Subrs): Changed scm_make_gsubr to
	scm_c_define_gsubr.  Thanks to Richard Y. Kim!

2002-04-24  Marius Vollmer  <mvo@zagadka.ping.de>

	* srfi-modules.texi (SRFI-13 Miscellaneous): Updated docs of
	string-tokenize.

2002-04-20  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-intro.texi (Scheme Layout), scm.texi (Reference Layout):
	Node moved from a to b.

	* guile.texi (Scheme Intro, Basic Ideas, Guile Scripting, Command