@@ -1,3 +1,7 @@
+2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* tests/reader.test: change misc-error in read-error.
+
 2002-07-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* tests/goops.test: Added tests for define-generic and
