@@ -1,3 +1,8 @@
+2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* scheme-memory.texi (Memory Blocks): add scm_calloc, scm_gc_calloc.
+	correct typos.
+	
 2002-08-05  Marius Vollmer  <marius.vollmer@uni-dortmund.de>
 
 	* intro.texi, srfi-modules.texi: Added (use-modules (ice-9
